      (Closes: #708576)
    + [NT] Ignore ":any" qualifiers in dependencies.  Thanks to
      Scott Ritchie for the report.  (Closes: #658320)

  * commands/info:
    + [NT] New file (replacing lintian-info).
    + [NT] Emit a deprecation warning for --include-dir
      and --[no-]user-dirs when they are not the first
      arguments and called as lintian-info.

  * data/common/source-fields:
    + [NT] Allow the "Dgit" field in source packages.  Thanks
      to Ian Jackson for the report.  (Closes: #721205)
  * data/fields/perl-provides:
    + [NT] Refresh against perl 5.18.
  * data/rules/policy-rules:
    + [BR] New file.
  * data/scripts/interpreters:
    + [NT] Use "python:any | python-minimal:any" as dependency
      for python scripts.  This fixes a false-positive for
      python-script-but-no-python-dep when dh_python2 generates
      a dependency of "python:any".  Thanks to Francois Gouget
      for the report.  (Closes: #711988)
  * data/scripts/{,versioned-}interpreters:
    + [NT] Apply patch from Gunnar Wolf to update which package
      is providing "rackup".  (Closes: #721268)

  * debian/lintian.install:
    + [NT] Install dplint and commands/*.
  * debian/lintian.links:
    + [NT] New file.
  * debian/rules:
    + [NT] Add code for substituting some placeholder values in
      dplint and lintian.
    + [NT] Invoke dh_link.
  * debian/tests/control:
    + [NT] Remove reference to testsuite-legacy.
  * debian/tests/testsuite-legacy:
    + [NT] Removed; no longer useful.

  * doc/README.developers:
    + [NT] Update the section on running Lintian from a source
      tree to mention that setting LINTIAN_ROOT is no longer
      needed.
    + [NT] Remove references to the legacy testsuite.
  * doc/tutorial/Lintian/Tutorial/TestSuite.pod:
    + [NT] Remove references to the legacy testsuite.

  * frontend/dplint:
    + [NT] New file.
  * frontend/lintian:
    + [NT] Automatically determine the LINTIAN_ROOT when run from
      the extracted source dir.