@@ -1,7 +1,7 @@
 doc/api.html
 doc/lintian.html
 doc/CREDITS
-doc/README
 doc/desc-files
 doc/lintian.xml
 doc/lintian.txt
+README
